--- a/Pagina_principal.html
+++ b/Pagina_principal.html
@@ -7,28 +7,49 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-             <img src="imagenes/logo.png" width="250px">
-        </div>
-        <nav class="nav_links">
-            <ul>
-                <li><a href="#contenido1"> <b>Inicio</b> </a></li>
-                <li><a href="#contenido2"> <b>Información</b> </a></li>
-                <li><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
-                <li><a href="#contenido4"> <b>Login</b> </a></li>
-            </ul>
-        </nav>
-        <a href="#contenidodonacion" class="btn"> <button> DONAR AHORA </button></a>
+    <header id="header">
+        <a href="Pagina_principal.html">
+            <img src="imagenes/logo.png" class="logo" >
+        </a> 
+        <input type="checkbox" id="menu" />
+        <label for="menu">
+            <img src="imagenes/menu.png" alt="menu desplegable" class="menu-icono">
+        </label>
+        <ul class="menu">
+            <li class="item"><a href="#contenido1"> <b>Inicio</b> </a></li>
+            <li class="item"><a href="#contenido2"> <b>Información</b> </a></li>
+            <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
+            <li class="item"><a href="#contenido4"> <b>Login</b> </a></li>
+            <li class="btn"><a href="#contenido5"><b> DONAR AHORA </b></a></li>
+        </ul>
     </header>
 
-    <div>
-        <img class="fondo_image" src="imagenes/arvoles.jpg" alt="n">
+    <div class="banner">
         <div id="cajita">
-            <h1 class="item1"><b>SYNERGY-M</b></h1>
+            <h1 class="item1">SYNERGY-M</h1>
             <a href="#contenido" class="item2">Empieza</a>
         </div>
     </div>
+
+    <div id="contenido">
+        <div class="cajas_texto">
+            <h1>¿QUIÉNES SOMOS?</h1>
+            <p  class="texto">¡Somos un apasionado grupo de desarrolladores con un objetivo claro: 
+                mejorar la ciudad de Madrid a través de la reforestación de sus áreas urbanas menos arboladas. 
+                Conscientes de los desafíos ambientales que enfrenta la ciudad, desde el aumento de las temperaturas
+                en verano hasta el frío invernal, estamos comprometidos en contribuir a la lucha 
+                contra el calentamiento global y crear un entorno más sostenible. <br><br>
+                Creemos que la reintroducción de árboles no solo embellecerá la ciudad, 
+                sino que también tendrá un impacto positivo en la calidad de vida de sus habitantes, 
+                proporcionando sombra, mejorando la calidad del aire y fomentando un equilibrio natural. 
+                Juntos, estamos dedicados a hacer de Madrid un lugar más verde y saludable para las 
+                generaciones venideras.</p>
+        </div>
+        <div class="imagenes">
+            <img src="imagenes/reforestacion.jpg" alt="arboles" style="width: 400px; height: auto; padding-top: 80px;">
+        </div>
+    </div>
+    
         
 <body>       
 <html>
