--- a/inicio.html
+++ b/inicio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header id="header">
-        <a href="Pagina_principal.html">
+        <a href="inicio.html">
             <img src="imagenes/logo.png" class="logo" >
         </a> 
         <input type="checkbox" id="menu" />
@@ -16,10 +16,10 @@
             <img src="imagenes/menu.png" alt="menu desplegable" class="menu-icono">
         </label>
         <ul class="menu">
-            <li class="item"><a href="#contenido1"> <b>Inicio</b> </a></li>
-            <li class="item"><a href="#contenido2"> <b>Información</b> </a></li>
+            <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
+            <li class="item"><a href="#contenido"> <b>Quienes somos</b> </a></li>
             <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
-            <li class="item"><a href="#contenido4"> <b>Login</b> </a></li>
+            <li class="item"><a href="login.html"> <b>Login</b> </a></li>
             <li class="btn"><a href="#contenido5"><b> DONAR AHORA </b></a></li>
         </ul>
     </header>
