--- a/inicio.html
+++ b/inicio.html
@@ -18,7 +18,7 @@
         <ul class="menu">
             <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
             <li class="item"><a href="#contenido"> <b>Quienes somos</b> </a></li>
-            <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
+            <li class="item"><a href="nuestro_bosque.html"> <b>Nuestro Bosque</b> </a></li>
             <li class="item"><a href="login.html"> <b>Login</b> </a></li>
             <li class="btn" id="donarBtn"><a href="dashboard.html"><b> DONAR AHORA </b></a></li>
         </ul>
@@ -53,13 +53,20 @@
         
     <script>
         document.getElementById("donarBtn").addEventListener("click", function (event) {
-            var usuarioIniciado = true; 
-
-            if (!usuarioIniciado) {
-                event.preventDefault();
-                alert("Debes iniciar sesión para donar.");
-                window.location.href = "login.html";
-            }
+            fetch('check_session.php')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.loggedIn) {
+                        // Usuario ha iniciado sesión, continuar con la donación
+                        console.log("Usuario inició sesión, permitir donación.");
+                    } else {
+                        // Usuario no ha iniciado sesión, prevenir la acción y redirigir a la página de inicio de sesión
+                        event.preventDefault();
+                        alert("Debes iniciar sesión para donar.");
+                        window.location.href = "login.html";
+                    }
+                })
+                .catch(error => console.error('Error al verificar sesión:', error));
         });
     </script>
 
