--- a/login.html
+++ b/login.html
@@ -23,9 +23,10 @@
     </label>
     <ul class="menu">
         <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
-        <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
-        <li class="item"><a href="login.html"> <b>Login</b> </a></li>
-        <li class="btn"><a href="#contenido5"><b> DONAR AHORA </b></a></li>
+            <li class="item"><a href="#contenido"> <b>Quienes somos</b> </a></li>
+            <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
+            <li class="item"><a href="login.html"> <b>Login</b> </a></li>
+            <li class="btn" id="donarBtn"><a href="dashboard.html"><b> DONAR AHORA </b></a></li>
     </ul>
 </header>
 
