mejoras de css y de links, asi como tambien responsive

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reforestación</title>
+    <title>Quienes somos</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -17,19 +17,12 @@
         </label>
         <ul class="menu">
             <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
-            <li class="item"><a href="#contenido"> <b>Quienes somos</b> </a></li>
+            <li class="item"><a href="quienes_somos.html"> <b>Quienes somos</b> </a></li>
             <li class="item"><a href="nuestro_bosque.html"> <b>Nuestro Bosque</b> </a></li>
             <li class="item"><a href="login.html"> <b>Login</b> </a></li>
             <li class="btn" id="donarBtn"><a href="dashboard.php"><b> DONAR AHORA </b></a></li>
         </ul>
     </header>
-
-    <div class="banner">
-        <div id="cajita">
-            <h1 class="item1">SYNERGY-M</h1>
-            <a href="#contenido" class="item2">Empieza</a>
-        </div>
-    </div>
 
     <div id="contenido">
         <div class="cajas_texto">
@@ -54,23 +47,5 @@
         </div>
     </div>
     
-        
-    <script>
-        document.getElementById("donarBtn").addEventListener("click", function (event) {
-            fetch('check_session.php')
-                .then(response => response.json())
-                .then(data => {
-                    if (data.loggedIn) {
-                        console.log("Usuario inició sesión, permitir donación.");
-                    } else {
-                        event.preventDefault();
-                        alert("Debes iniciar sesión para donar.");
-                        window.location.href = "login.html";
-                    }
-                })
-                .catch(error => console.error('Error al verificar sesión:', error));
-        });
-    </script>
-
-<body>       
-<html>
+</body>
+</html>
