--- a/error_login.html
+++ b/error_login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error de inicio de sesión</title>
-    <link rel="stylesheet" href="css/style.css"> <
+    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/dashboard.css">
 </head>
 <body>
     <header id="header">
@@ -17,8 +18,8 @@
         </label>
         <ul class="menu">
             <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
-            <li class="item"><a href="#contenido"> <b>Quienes somos</b> </a></li>
-            <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
+            <li class="item"><a href="quienes_somos.html"> <b>Quienes somos</b> </a></li>
+            <li class="item"><a href="nuestro_bosque.html"> <b>Nuestro Bosque</b> </a></li>
             <li class="item"><a href="login.html"> <b>Login</b> </a></li>
             <li class="btn"><a href="#contenido5"><b> DONAR AHORA </b></a></li>
         </ul>
@@ -28,9 +29,8 @@
         <div class="cajas_texto">
             <h1>Error de inicio de sesión</h1>
             <p class="texto">El nombre de usuario o la contraseña son incorrectos. Vuelve a intentarlo.</p>
-        </div>
-        <div>
-            <a href="login.html">volver</a>
+            <p></p>
+            <a id="volver" href="login.html">Volver</a>
         </div>
     </div>
 </body>
