--- a/login.html
+++ b/login.html
@@ -23,7 +23,8 @@
     </label>
     <ul class="menu">
         <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
-        <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
+        <li class="item"><a href="quienes_somos.html"> <b>Quienes somos</b> </a></li>
+        <li class="item"><a href="nuestro_bosque.html"> <b>Nuestro Bosque</b> </a></li>
         <li class="item"><a href="login.html"> <b>Login</b> </a></li>
         <li class="btn" id="donarBtn"><a href="dashboard.php"><b> DONAR AHORA </b></a></li>
     </ul>
