responsive y nueva informacion

--- a/inicio.html
+++ b/inicio.html
@@ -47,10 +47,11 @@
                 <br><br>
                 <span class="ultimo-parrafo">¡Ayudanos a conseguir nuestro objetivo de 2000€!! <br> Cada 2€ es un árbol plantado</span>
             </p>
-                
+
         </div>
         <div class="imagenes">
             <img src="imagenes/reforestacion.jpg" alt="arboles" style="width: 400px; height: auto; padding-top: 80px;">
+            <a href="quienes_somos.html" class="item2">Saber mas</a>
         </div>
     </div>
     
