--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -46,6 +46,50 @@
             <img src="imagenes/reforestacion.jpg" alt="arboles" style="width: 400px; height: auto; padding-top: 80px;">
         </div>
     </div>
+
+    <div id="contenido">
+        <div class="cajas_texto">
+            <h1>¿QUÉ ES CROWFUNDING?</h1>
+            <p class="texto">¡BIENVENIDOS! <br>
+                Queremos mejorar la ciudad de Madrid a través de la reforestación de sus áreas urbanas menos arboladas. 
+                Somos conscientes de los desafíos ambientales que enfrenta la ciudad, desde el aumento de las temperaturas
+                en verano hasta el frío invernal, estamos comprometidos en contribuir a la lucha 
+                contra el calentamiento global. <br><br>
+                Creemos que la reintroducción de árboles no solo embellecerá la ciudad, 
+                sino que también tendrá un impacto positivo en la calidad de vida de sus habitantes, 
+                proporcionando sombra, mejorando la calidad del aire y fomentando un equilibrio natural. 
+                Juntos, estamos dedicados a hacer de Madrid un lugar más verde y saludable para las 
+                generaciones venideras.
+                <br><br>
+                <span class="ultimo-parrafo">¡Ayudanos a conseguir nuestro objetivo de 2000€!! <br> Cada 2€ es un árbol plantado</span>
+            </p>
+        </div>
+        <div class="imagenes">
+            <img src="imagenes/reforestacion.jpg" alt="arboles" style="width: 400px; height: auto; padding-top: 80px;">
+        </div>
+    </div>
+
+    <div id="contenido">
+        <div class="cajas_texto">
+            <h1>IMPORTANCIA DE LOS ARBOLES</h1>
+            <p class="texto">¡BIENVENIDOS! <br>
+                Queremos mejorar la ciudad de Madrid a través de la reforestación de sus áreas urbanas menos arboladas. 
+                Somos conscientes de los desafíos ambientales que enfrenta la ciudad, desde el aumento de las temperaturas
+                en verano hasta el frío invernal, estamos comprometidos en contribuir a la lucha 
+                contra el calentamiento global. <br><br>
+                Creemos que la reintroducción de árboles no solo embellecerá la ciudad, 
+                sino que también tendrá un impacto positivo en la calidad de vida de sus habitantes, 
+                proporcionando sombra, mejorando la calidad del aire y fomentando un equilibrio natural. 
+                Juntos, estamos dedicados a hacer de Madrid un lugar más verde y saludable para las 
+                generaciones venideras.
+                <br><br>
+                <span class="ultimo-parrafo">¡Ayudanos a conseguir nuestro objetivo de 2000€!! <br> Cada 2€ es un árbol plantado</span>
+            </p>
+        </div>
+        <div class="imagenes">
+            <img src="imagenes/reforestacion.jpg" alt="arboles" style="width: 400px; height: auto; padding-top: 80px;">
+        </div>
+    </div>
     
 </body>
 </html>
