--- a/nuestro_bosque.html
+++ b/nuestro_bosque.html
@@ -19,8 +19,8 @@
             </label>
             <ul class="menu">
                 <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
-                <li class="item"><a href="#contenido"> <b>Quienes somos</b> </a></li>
-                <li class="item"><a href="#contenido3"> <b>Nuestro Bosque</b> </a></li>
+                <li class="item"><a href="nuestro_bosque.html"> <b>Quienes somos</b> </a></li>
+                <li class="item"><a href="nuestro_bosque.html"> <b>Nuestro Bosque</b> </a></li>
                 <li class="item"><a href="login.html"> <b>Login</b> </a></li>
                 <li class="btn"><a href="#contenido5"><b> DONAR AHORA </b></a></li>
             </ul>
