--- a/donar.html
+++ b/donar.html
@@ -25,7 +25,7 @@
         </ul>
     </header>
 
-    <div class="message"> </div>
+    <div class="message"> donacion </div>
     <div class="flex-container">
         <div class="login-container">
             <header>
