--- a/nuestro_bosque.html
+++ b/nuestro_bosque.html
@@ -19,10 +19,10 @@
             </label>
             <ul class="menu">
                 <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
-                <li class="item"><a href="nuestro_bosque.html"> <b>Quienes somos</b> </a></li>
+                <li class="item"><a href="quienes_somos.html"> <b>Quienes somos</b> </a></li>
                 <li class="item"><a href="nuestro_bosque.html"> <b>Nuestro Bosque</b> </a></li>
                 <li class="item"><a href="login.html"> <b>Login</b> </a></li>
-                <li class="btn"><a href="#contenido5"><b> DONAR AHORA </b></a></li>
+                <li class="btn" id="donarBtn"><a href="dashboard.php"><b> DONAR AHORA </b></a></li>
             </ul>
         </header>
 
@@ -33,6 +33,23 @@
             </div>
         </div>
 
+
+        <script>
+            document.getElementById("donarBtn").addEventListener("click", function (event) {
+                fetch('check_session.php')
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data.loggedIn) {
+                            console.log("Usuario inició sesión, permitir donación.");
+                        } else {
+                            event.preventDefault();
+                            alert("Debes iniciar sesión para donar.");
+                            window.location.href = "login.html";
+                        }
+                    })
+                    .catch(error => console.error('Error al verificar sesión:', error));
+            });
+        </script>
     
 </body>
 </html>
