--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,7 @@
         </label>
         <ul class="menu">
             <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
-            <li class="item"><a href="#contenido"> <b>Quienes somos</b> </a></li>
+            <li class="item"><a href="#contenido"> <b>Quiénes somos</b> </a></li>
             <li class="item"><a href="login.html"> <b>Login</b> </a></li>
             <li class="btn" id="donarBtn"><a href="dashboard.php"><b> DONAR AHORA </b></a></li>
         </ul>
@@ -50,7 +50,7 @@
         </div>
         <div class="imagenes">
             <img src="imagenes/reforestacion.jpg" alt="arboles" style="width: 400px; height: auto; padding-top: 80px;">
-            <a href="quienes_somos.html" class="item2">Saber mas</a>
+            <a href="quienes_somos.html" class="item2">Saber más</a>
         </div>
     </div>
     
