--- a/error_login.html
+++ b/error_login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error de inicio de sesión</title>
+    <title>Error de index de sesión</title>
     <link rel="stylesheet" href="css/style.css"> 
     <link rel="stylesheet" href="css/dashboard.css">
 </head>
 <body>
     <header id="header">
-        <a href="inicio.html">
+        <a href="index.html">
             <img src="imagenes/logo.png" class="logo" >
         </a> 
         <input type="checkbox" id="menu" />
@@ -17,7 +17,7 @@
             <img src="imagenes/menu.png" alt="menu desplegable" class="menu-icono">
         </label>
         <ul class="menu">
-            <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
+            <li class="item"><a href="index.html"> <b>Inicio</b> </a></li>
             <li class="item"><a href="quienes_somos.html"> <b>Quienes somos</b> </a></li>
             <li class="item"><a href="login.html"> <b>Login</b> </a></li>
             <li class="btn" id="donarBtn"><a href="dashboard.php"><b> DONAR AHORA </b></a></li>
