--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 <body>
 
   <header id="header">
-    <a href="inicio.html">
+    <a href="index.html">
         <img src="imagenes/logo.png" class="logo" >
     </a> 
     <input type="checkbox" id="menu" />
@@ -22,7 +22,7 @@
         <img src="imagenes/menu.png" alt="menu desplegable" class="menu-icono">
     </label>
     <ul class="menu">
-        <li class="item"><a href="inicio.html"> <b>Inicio</b> </a></li>
+        <li class="item"><a href="index.html"> <b>Inicio</b> </a></li>
         <li class="item"><a href="quienes_somos.html"> <b>Quienes somos</b> </a></li>
         <li class="item"><a href="login.html"> <b>Login</b> </a></li>
         <li class="btn" id="donarBtn"><a href="dashboard.php"><b> DONAR AHORA </b></a></li>
